[tool.poetry]
name = "python-env"
version = "0.1.0"
description = ""
authors = ["iwatos <nonbiriactive@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "*"
pylint = "^2.5"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"